# sql-analytics-workspace

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  database.py  environment.py  grader.py
server/tasks/: __init__.py  easy.py  hard.py  medium.py  very_hard.py
